rethinkdb-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb
spec:
  selector:
    matchLabels:
      db: rethinkdb
      role: replica
  replicas: 3
  # Must match RETHINKDB-CLUSTER env and service name.
  serviceName: rethinkdb
  template:
    metadata:
      labels:
        db: rethinkdb
        role: replica
    spec:
      containers:
      - image: drawboardus.azurecr.io/rethinkdb:2.4
        args:
          - "--cache-size"
          - "1024"
        imagePullPolicy: IfNotPresent
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        resources:
          limits:
            cpu: 500m
            memory: 1.5Gi
          requests:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - mountPath: /data
          name: data
        readinessProbe:
          exec:
            command:
            - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
              - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      imagePullSecrets:
      - name: docker-registry
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
        volume.alpha.kubernetes.io/storage-class: anything
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
