rethinkdb-admin.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    db: rethinkdb
    role: admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    db: rethinkdb
  name: rethinkdb-admin
spec:
  selector:
    matchLabels:
      db: rethinkdb
      role: admin
  replicas: 1
  template:
    metadata:
      labels:
        db: rethinkdb
        role: admin
    spec:
      imagePullSecrets:
      - name: docker-registry
      serviceAccountName: rethinkdb
      containers:
      - image: drawboardus.azurecr.io/rethinkdb:2.4
        imagePullPolicy: IfNotPresent
        name: rethinkdb
        ports:
        - containerPort: 8080
          name: admin
        - containerPort: 28015
          name: driver
        - containerPort: 29015
          name: cluster
        livenessProbe:
          exec:
            command:
              - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
              - /probe
          failureThreshold: 3
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 256Mi
        volumeMounts:
        - mountPath: /data/rethinkdb_data
          name: storage
      volumes:
      - name: storage
        emptyDir: {}
